--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>1920</width>
+    <height>1080</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -194,8 +194,8 @@
    <widget class="QLabel" name="label_distance_titre_2">
     <property name="geometry">
      <rect>
-      <x>360</x>
-      <y>150</y>
+      <x>770</x>
+      <y>340</y>
       <width>131</width>
       <height>41</height>
      </rect>
@@ -218,8 +218,8 @@
    <widget class="QLabel" name="label_text_rang">
     <property name="geometry">
      <rect>
-      <x>360</x>
-      <y>200</y>
+      <x>770</x>
+      <y>380</y>
       <width>31</width>
       <height>16</height>
      </rect>
@@ -231,8 +231,8 @@
    <widget class="QLabel" name="label_rang_vector">
     <property name="geometry">
      <rect>
-      <x>400</x>
-      <y>200</y>
+      <x>810</x>
+      <y>380</y>
       <width>341</width>
       <height>16</height>
      </rect>
@@ -369,13 +369,69 @@
      <string/>
     </property>
    </widget>
+   <widget class="QLabel" name="label_titre_adjacence">
+    <property name="geometry">
+     <rect>
+      <x>770</x>
+      <y>10</y>
+      <width>131</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+      <underline>false</underline>
+     </font>
+    </property>
+    <property name="text">
+     <string>Adjacence</string>
+    </property>
+    <property name="textFormat">
+     <enum>Qt::AutoText</enum>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_adjacence_vector">
+    <property name="geometry">
+     <rect>
+      <x>770</x>
+      <y>60</y>
+      <width>371</width>
+      <height>261</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_save">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>380</x>
+      <y>30</y>
+      <width>93</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Save</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>1920</width>
      <height>26</height>
     </rect>
    </property>
