--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -156,9 +156,9 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>430</y>
-      <width>751</width>
-      <height>16</height>
+      <y>426</y>
+      <width>691</width>
+      <height>20</height>
      </rect>
     </property>
     <property name="orientation">
@@ -352,7 +352,7 @@
      <rect>
       <x>20</x>
       <y>540</y>
-      <width>741</width>
+      <width>681</width>
       <height>18</height>
      </rect>
     </property>
@@ -493,8 +493,8 @@
     </property>
     <property name="geometry">
      <rect>
-      <x>820</x>
-      <y>470</y>
+      <x>1240</x>
+      <y>160</y>
       <width>201</width>
       <height>41</height>
      </rect>
@@ -517,8 +517,8 @@
    <widget class="QLabel" name="label_Matrice_arrete_vector">
     <property name="geometry">
      <rect>
-      <x>830</x>
-      <y>510</y>
+      <x>1240</x>
+      <y>210</y>
       <width>211</width>
       <height>151</height>
      </rect>
@@ -530,10 +530,10 @@
    <widget class="Line" name="line_2">
     <property name="geometry">
      <rect>
-      <x>780</x>
+      <x>720</x>
       <y>460</y>
-      <width>20</width>
-      <height>391</height>
+      <width>21</width>
+      <height>371</height>
      </rect>
     </property>
     <property name="orientation">
@@ -564,7 +564,7 @@
      <enum>Qt::AutoText</enum>
     </property>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>20</x>
@@ -614,7 +614,7 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>1250</x>
@@ -646,7 +646,7 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>1250</x>
@@ -678,7 +678,7 @@
      </item>
     </layout>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>1390</x>
@@ -717,7 +717,7 @@
      <x>0</x>
      <y>0</y>
      <width>1820</width>
-     <height>26</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
